# embedded-freertos

./: Cargo.toml  README.md  bindgen.c  build.rs
dummy_stdlib/: string.h
include/: FreeRTOSConfig.h
src/: bindgen.rs  critical_section.rs  heap_alloc.rs  heap_rust.rs  lib.rs  list.rs  message_buffer.rs  portable.rs  queue.rs  semphr.rs  stream_buffer.rs  task.rs  timers.rs
stdlib/: string.h
