[package]
name = "embedded-freertos"
version = "0.1.1"
edition = "2024"
description = "Provide a convenient and easy-to-use FreeRTOS integration for Rust."
keywords = ["FreeRTOS", "bindgen", "cc", "no_std", "bare-metal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/823984418/embedded-freertos"

[dependencies]

[build-dependencies]
cc = "1.2.65"
build-rs = "0.3.4"
bindgen = "0.72.1"
regex = "1.12.4"

[features]
default = ["dummy_stdlib", "heap_4"]
std = []

dummy_stdlib = []

portable-MSVC-MingW = []
portable-ARM_CM0 = []
portable-ARM_CM3 = []
portable-ARM_CM4F = []

heap_1 = []
heap_2 = []
heap_3 = []
heap_4 = []
heap_5 = []

heap_alloc = []

[lints.rust]
